--- a/Booking_Ticket_FE/package.json
+++ b/Booking_Ticket_FE/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "install": "^0.13.0",
     "npm": "^11.5.1",
