--- a/Booking_Ticket_FE/package.json
+++ b/Booking_Ticket_FE/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "install": "^0.13.0",
     "npm": "^11.5.1",
     "react": "^19.1.0",
