--- a/Booking_Ticket_BE/src/main/resources/application.properties
+++ b/Booking_Ticket_BE/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.application.name=BookingTicketApp
 #
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.messaging=DEBUG
+
 
 #default is 10
 spring.profiles.active=dev
