--- a/Booking_Ticket_FE/package.json
+++ b/Booking_Ticket_FE/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@stomp/stompjs": "^7.1.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
@@ -21,7 +22,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
