--- a/Booking_Ticket_FE/package.json
+++ b/Booking_Ticket_FE/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "install": "^0.13.0",
+    "lucide-react": "^0.536.0",
     "npm": "^11.5.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
