--- a/FE_ADMIN/package.json
+++ b/FE_ADMIN/package.json
@@ -17,6 +17,8 @@
     "install": "^0.13.0",
     "npm": "^11.5.1",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
