--- a/Booking_Ticket_BE/src/main/resources/application.properties
+++ b/Booking_Ticket_BE/src/main/resources/application.properties
@@ -14,6 +14,16 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.socket=DEBUG
 logging.level.org.springframework.messaging=DEBUG
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+server.port=8099
+
+logging:
+  level:
+    org.springframework.web.socket: DEBUG
+    org.springframework.web.socket.messaging: DEBUG
+    org.springframework.messaging: DEBUG
 
 #default is 10
 spring.profiles.active=dev
