--- a/Booking_Ticket_FE/package.json
+++ b/Booking_Ticket_FE/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^7.7.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
